Added subscription module APIs
