# src/controllers/user/user.controller.ts
@@ -1,9 +1,17 @@
 import { RequestHandler } from "express";
+import * as userService from "../../services/user/user.services.js";
 
-export const getUserProfile: RequestHandler = (req, res, next) => {
-  const { profileId } = req.params;
+export const createUserAISubscription: RequestHandler = async (req, res, next) => {
+    const aiProfileId = <string>req.body.aiProfileId;
+    const tier = Number.parseInt(<string>req.body.tier);
+    const user: any = req.user;
+    const userId = user["_id"];
 
-  
-};
+    try {
+        await userService.createUserAISubscription(userId, aiProfileId, tier);
 
-export const getUserChatHistory: RequestHandler = (req, res, next) => {};
+        res.status(201).send();
+    } catch (error) {
+        res.status(400).send({ error });
+    }
+}
