# src/routes/chat/chat.routes.ts
@@ -1,15 +1,14 @@
 import express from "express";
 import passport from "passport";
 import * as chatController from "../../controllers/chat/chat.controller.js";
-import { passpotJWTMiddleware } from "../../middlewares/passportJWTMiddleware.js";
+import { passportJWTMiddleware } from "../../middlewares/passportJWTMiddleware.js";
 
 const router = express.Router();
 
-router.get(
-  "/user-chats/:profileId",
-  passpotJWTMiddleware,
-  chatController.getUserChats
-);
+router.get("/user-chats/:profileId", passportJWTMiddleware, chatController.getUserChats);
+
+router.post("/user-chats/new-chat", passportJWTMiddleware, chatController.createNewChat);
+
 //router.route("/chat-messages/:chatId").get(chatController.getChatMessages);
 //router.route("/chat-messages/insert").post(chatController.insertNewChatMessage);
 
