# src/routes/user/user.routes.ts
@@ -1,15 +1,9 @@
 import express from "express";
-import passport from "passport";
-import {
-  getUserChatHistory,
-  getUserProfile,
-} from "../../controllers/user/user.controller.js";
-import { passpotJWTMiddleware } from "../../middlewares/passportJWTMiddleware.js";
+import { passportJWTMiddleware } from "../../middlewares/passportJWTMiddleware.js";
+import { createUserAISubscription } from "../../controllers/user/user.controller.js";
 
 const router = express.Router();
 
-router.get(
-  "/:profileId",
-  passpotJWTMiddleware,
-  getUserProfile
-);
+router.post("/ai-subscription", passportJWTMiddleware, createUserAISubscription);
+
+export default router;
